
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {struct TYPE_4__* next; } ;
typedef TYPE_1__ Kfunc ;


 int close (scalar_t__) ;
 int delk (TYPE_1__**) ;
 scalar_t__ envfd ;
 scalar_t__ envpath ;
 int free (scalar_t__) ;
 TYPE_1__* kf ;
 scalar_t__ outfd ;
 scalar_t__ outfile ;
 scalar_t__ seg ;
 scalar_t__ them ;
 scalar_t__ us ;

__attribute__((used)) static void
cleanup(void)
{
 Kfunc * k;
 Kfunc * l;

 if(us)
  free(us);
 if(seg)
  free(seg);
 if(them)
  free(them);
 if(outfile)
  free(outfile);
 if(envpath)
  free(envpath);

 if(envfd > 0)
  close(envfd);
 if(outfd > 0)
  close(outfd);

 for(k = kf; k; k = l)
 {
  l = k->next;
  delk(&k);
 }
}
